force-app/main/default/objects/Trainee_General_Evaluation__c/Trainee_General_Evaluation__c.object-meta.xml
<CustomObject>
    <label>Trainee General Evaluation</label>
    <nameField>
        <displayFormat>V2TGE#{00000}</displayFormat>
        <label>Trainee General Evaluation ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Trainee General Evaluation</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>