force-app/main/default/objects/Trainee_General_Evaluation__c/fields/Activeness__c.field-meta.xml
<CustomField>
    <fullName>Activeness__c</fullName>
    <label>Activeness</label>
    <precision>2</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>