force-app/main/default/objects/Trainee_General_Evaluation__c/fields/Average_Skill__c.field-meta.xml
<CustomField>
    <fullName>Average_Skill__c</fullName>
    <formula>(Coding_Skill__c  +  Communication_Skill__c  +  Logical_Skill__c  +  Activeness__c ) / 20</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Average Skill</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>