force-app/main/default/objects/Trainee_General_Evaluation__c/fields/Coding_Skill__c.field-meta.xml
<CustomField>
    <fullName>Coding_Skill__c</fullName>
    <description>Please Rate between 0-5</description>
    <label>Coding Skill</label>
    <precision>2</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>