force-app/main/default/objects/Trainee_General_Evaluation__c/fields/Communication_Skill__c.field-meta.xml
<CustomField>
    <fullName>Communication_Skill__c</fullName>
    <label>Communication Skill</label>
    <precision>2</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>