force-app/main/default/objects/Trainee_General_Evaluation__c/fields/Trainee__c.field-meta.xml
<CustomField>
    <fullName>Trainee__c</fullName>
    <label>Trainee</label>
    <referenceTo>Trainee__c</referenceTo>
    <relationshipLabel>Trainee General Evaluation</relationshipLabel>
    <relationshipName>Trainee_General_Evaluation</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>