force-app/main/default/objects/Trainee_General_Evaluation__c/validationRules/Marks_Between_0_to_5.validationRule-meta.xml
<ValidationRule>
    <fullName>Marks_Between_0_to_5</fullName>
    <active>true</active>
    <errorConditionFormula>Not
(
And(Communication_Skill__c &gt;=0 ,Communication_Skill__c &lt;=5 , Coding_Skill__c &gt;=0 , Coding_Skill__c&lt;=5 ,
Logical_Skill__c &gt;=0 , Logical_Skill__c &lt;=5,  
Activeness__c &gt;=0 , Activeness__c&lt;=5)
)</errorConditionFormula>
    <errorMessage>Please fill all marks and make sure marks should be in between 0 and 5</errorMessage>
</ValidationRule>